--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-icons": "^4.3.1",
     "react-slick": "^0.28.1",
     "remix": "^1.3.3",
+    "slugify": "^1.6.5",
     "tiny-invariant": "^1.2.0"
   },
   "devDependencies": {
