--- a/fly.toml
+++ b/fly.toml
@@ -7,6 +7,7 @@ processes = [ ]
 DATABASE_URL = "file:/data/sqlite.db"
 PORT = "8080"
 NODE_ENV = "production"
+URL_API_ANILIST = "https://graphql.anilist.co/"
 
 [experimental]
 allowed_public_ports = [ ]
