--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -170,7 +170,8 @@ jobs:
   deploy:
     name: 🚀 Deploy
     runs-on: ubuntu-latest
-    needs: [lint, typecheck, vitest, cypress, build]
+    needs: [lint, typecheck, vitest, build]
+    # remove ==>  cypress in "needs"
     # only build/deploy main branch on pushes
     if: ${{ (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/dev') && github.event_name == 'push' }}
 
